<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Reset" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageTaaza"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:contentDescription="@string/amul_taaza"
                app:srcCompat="@drawable/amul_taaza" />

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.75">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5">

                    <TextView
                        android:id="@+id/textTaaza"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:text="Amul Taaza" />

                    <TextView
                        android:id="@+id/textTaazaHalfLitre"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:text="@string/one_litre" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5">

                    <TextView
                        android:id="@+id/taazaPrice"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:text="@string/zero" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/taazaQuantityLayout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/taazaQuantity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/noOfItems"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>

                </TableRow>

            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageGold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:contentDescription="@string/amul_gold"
                app:srcCompat="@drawable/amul_gold" />

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.75">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5">

                    <TextView
                        android:id="@+id/textGold"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:text="Amul Gold" />

                    <TextView
                        android:id="@+id/textGoldHalfLitre"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:text="@string/one_litre" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5">

                    <TextView
                        android:id="@+id/goldPrice"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:text="@string/zero" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/goldQuantityLayout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/goldQuantity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/noOfItems"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>

                </TableRow>

            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageDahi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:contentDescription="Dahi"
                app:srcCompat="@drawable/amul_dahi" />

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.75">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5">

                    <TextView
                        android:id="@+id/textDahi"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:text="Amul Masti - Dahi" />

                    <TextView
                        android:id="@+id/textDahi200g"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:text="1 cup (200g)" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5">

                    <TextView
                        android:id="@+id/dahiPrice"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:text="@string/zero" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/dahiQuantityLayout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/dahiQuantity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/noOfItems"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>

                </TableRow>

            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageChaach"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:contentDescription="Chaach"
                app:srcCompat="@drawable/amul_chaach" />

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.75">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5">

                    <TextView
                        android:id="@+id/textChaach"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:text="Amul Chaach" />

                    <TextView
                        android:id="@+id/textChaachHalfLitre"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:text="@string/half_litre" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5">

                    <TextView
                        android:id="@+id/chaachPrice"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:text="@string/zero" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/chaachQuantityLayout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/chaachQuantity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/noOfItems"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>

                </TableRow>

            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imagePaneer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:contentDescription="Paneer"
                app:srcCompat="@drawable/amul_paneer" />

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.75">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5">

                    <TextView
                        android:id="@+id/textPaneer"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:text="Amul Paneer" />

                    <TextView
                        android:id="@+id/textPaneer200g"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:text="1 pack (200g)" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5">

                    <TextView
                        android:id="@+id/paneerPrice"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:text="@string/zero" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/paneerQuantityLayout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/paneerQuantity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/noOfItems"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>

                </TableRow>

            </TableLayout>

        </LinearLayout>

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Calculate" />

    </LinearLayout>

</ScrollView>